kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shrtn-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: shrtn.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: shrtn-server-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shrtn-client-svc
            port:
              number: 80
